--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -1,10 +1,12 @@
 .listContainer {
     display: flex;
     justify-content: center;
+    // display: flex;
     margin-top: 20px;
 }
 
 .listWrapper {
+    // flex-direction: column;
     width: 100%;
     max-width: 1024px;
     display: flex;
@@ -81,4 +83,33 @@
 
 .listResult {
     flex: 3;
+}
+
+@media screen and (max-width: 480px) {
+    .listContainer {
+        width: 600px;
+
+    }
+
+    .listWrapper {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .listSearch {
+        position: relative;
+        width: 80%;
+
+        // padding: 10px 20px;
+    }
+
+    .listResult {
+        width: 90%;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        flex-direction: column;
+        padding: 10px 20px;
+    }
 }
